# oneOS

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO-list-1.txt  TODO-list-2.txt  TODO-list-3.txt  TODO-list-App_startup_speed.txt  TODO-list.txt  TODO-list_MMU-backed-AddressSpace.txt  build_and_run.sh  build_and_run.txt  help.txt  oneOS Post-MMU TODO List.txt  virt.dtb  virt.dts
.cargo/: config.toml
applications/: Cargo.toml  README.md
applications/chatbot/: Cargo.toml  config.toml  manifest.toml
applications/chatbot/src/: main.rs
applications/fault_exec/: Cargo.toml  config.toml  manifest.toml
applications/fault_exec/src/: main.rs
applications/fault_read/: Cargo.toml  config.toml  manifest.toml
applications/fault_read/src/: main.rs
applications/fault_text/: Cargo.toml  config.toml  manifest.toml
applications/fault_text/src/: main.rs
applications/fault_write/: Cargo.toml  config.toml  manifest.toml
applications/fault_write/src/: main.rs
applications/guess_number/: Cargo.toml  config.toml  manifest.toml
applications/guess_number/src/: main.rs
applications/hello/: Cargo.toml  config.toml  manifest.toml
applications/hello/assets/: greeting.txt
applications/hello/src/: main.rs
applications/sdk/oneos-app/: Cargo.toml  link-aarch64.ld  link-x86_64.ld
applications/sdk/oneos-app/src/: lib.rs
boot-proto/: Cargo.toml
boot-proto/src/: lib.rs
bootloader/: Cargo.toml
bootloader/src/: elf.rs  main.rs
kernel/: Cargo.toml  aarch64-raw.ld  build.rs  x86_64-raw.ld
kernel/src/: boot_info.rs  heap.rs  irq_work.rs  lib.rs
kernel/src/app/: abi.rs  console.rs  elf.rs  mod.rs
kernel/src/arch/: aarch64.rs  mod.rs  x86_64.rs
kernel/src/audit/: mod.rs
kernel/src/boot/: mod.rs
kernel/src/console/: line.rs  mgr.rs  mod.rs
kernel/src/display/: mod.rs
kernel/src/drivers/: mod.rs  serial.rs
kernel/src/gfx/: mod.rs
kernel/src/goes/: crc32.rs  mod.rs  records.rs  replay.rs  view.rs  writer.rs
kernel/src/ipc/: mod.rs  registry.rs
kernel/src/mmu/: aarch64.rs  addrspace.rs  mod.rs  switch.rs  x86_64.rs
kernel/src/panic/: mod.rs
kernel/src/sandbox/: mod.rs
kernel/src/sched/: arch_aarch64.rs  arch_x86_64.rs  mod.rs
kernel/src/service/: abi.rs  mod.rs
kernel/src/shell/: mod.rs
kernel/src/sync/: condvar.rs  irq.rs  mod.rs  mutex.rs  semaphore.rs  spinlock.rs  wait_queue.rs
kernel/src/text/: mod.rs
kernel/src/timer/: mod.rs
kernel/src/virtio/: blk.rs  keyboard.rs  mod.rs  virtq.rs
kernel/src/workspace/: mod.rs
services/: Cargo.toml
services/goesd/: Cargo.toml  manifest.toml
services/goesd/src/: ipc.rs  lib.rs  server.rs
services/oneconsole/: Cargo.toml  manifest.toml
services/oneconsole/src/: ipc.rs  lib.rs  ui.rs
services/sdk/oneos-service/: Cargo.toml  link-aarch64.ld  link-x86_64.ld
services/sdk/oneos-service/src/: lib.rs
services/svc_logger/: Cargo.toml  manifest.toml
services/svc_logger/src/: ipc.rs  lib.rs  logger.rs
services/svc_notify/: Cargo.toml  manifest.toml
services/svc_notify/src/: ipc.rs  lib.rs  notify.rs
services/svc_time/: Cargo.toml  manifest.toml
services/svc_time/src/: ipc.rs  lib.rs  time.rs
xtask/: Cargo.toml
xtask/src/: esp.rs  main.rs
